refactor(backend:iam): AuthAccount 领域层异常归位
- 领域层不再抛 BizException，改为 DomainException 子类
- 删除领域层对 IamAuthNErrorCode 的依赖
- JDK 异常（IllegalArgumentException / IllegalStateException）
  统一改为 DomainValidationException / DomainStateException
- 新增 DomainStateException / DomainAuthenticationException
- AuthAppService.authenticate() 捕获领域异常，翻译为 BizException
- 保持防枚举行为（账号不存在/密码错误/状态异常统一返回
  iam.authn.user_login_error）

Refs: 异常规范审查